Changelog
=========


1.1.3 (unreleased)
------------------

- Nothing changed yet.


1.1.2 (2017-03-02)
------------------

- Downgrade select2 from 4.0.3 to 4.0.2 to fix an ie11 issue.
  See https://github.com/select2/select2/issues/4525.
  [elioschmutz]

- Move select2 files into a folder without a version postfix. This makes it much
  easier to upgrade/downgrade the select2 version without upgradesteps.
  [elioschmutz]

1.1.1 (2017-02-22)
------------------

- BugFix recarding vocabularies and the tags feature of select2.
  [mathias.leimgruber]


1.1.0 (2017-02-08)
------------------

- Add i18n helper for translations.
  [mathias.leimgruber]

- Implement select2 tag option for adding new keywords.
  This hides the new keyword textarea.
  Warning: this is the new default, you can disable it by passing `tags: false`.
  [mathias.leimgruber]


1.0.4 (2017-02-07)
------------------

- Add support for `schema.Tuple` fields.
  [mathias.leimgruber]


1.0.3 (2016-10-04)
------------------

- Disable compression of the already minified "select2.min.js".
  [mbaechtold]


1.0.2 (2016-09-28)
------------------

- Make "add new term permission" configurable + lawgiver support.
  [mathias.leimgruber]


1.0.1 (2016-09-28)
------------------

- Reinitilize select2 if overlay content is replaced.
  [mathias.leimgruber]


1.0.0 (2016-09-28)
------------------

- Init Release
  [mathias.leimgruber]